// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: SEO meta head > default (home / website) head 1`] = `
[
  {
    "title": "且听书吟 - 诗与梦想的远方",
  },
  {
    "content": "且听书吟 - 诗与梦想的远方",
    "name": "title",
  },
  {
    "content": "诗与梦想的远方",
    "name": "description",
  },
  {
    "content": "WordPress 3.2.1",
    "name": "generator",
  },
  {
    "content": "雨帆",
    "name": "author",
  },
  {
    "href": "https://yufan.me",
    "rel": "author",
    "tagName": "link",
  },
  {
    "content": "雨帆,且听书吟,syhily,amehochan,yufan",
    "name": "keywords",
  },
  {
    "href": "https://yufan.me/feed/",
    "rel": "alternate",
    "tagName": "link",
    "title": "且听书吟",
    "type": "application/rss+xml",
  },
  {
    "href": "https://yufan.me/feed/atom/",
    "rel": "alternate",
    "tagName": "link",
    "title": "且听书吟",
    "type": "application/atom+xml",
  },
  {
    "href": "https://yufan.me/sitemap.xml",
    "rel": "sitemap",
    "tagName": "link",
  },
  {
    "href": "/favicon.ico",
    "rel": "icon",
    "sizes": "32x32",
    "tagName": "link",
  },
  {
    "href": "/favicon.svg",
    "rel": "icon",
    "tagName": "link",
    "type": "image/svg+xml",
  },
  {
    "href": "/apple-touch-icon.png",
    "rel": "apple-touch-icon",
    "tagName": "link",
  },
  {
    "href": "/manifest.webmanifest",
    "rel": "manifest",
    "tagName": "link",
  },
  {
    "content": "index, follow",
    "name": "robots",
  },
  {
    "content": "index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1",
    "name": "googlebot",
  },
  {
    "content": "website",
    "property": "og:type",
  },
  {
    "content": "zh-CN",
    "property": "og:locale",
  },
  {
    "content": "且听书吟 - 诗与梦想的远方",
    "property": "og:title",
  },
  {
    "content": "诗与梦想的远方",
    "property": "og:description",
  },
  {
    "content": "https://yufan.me",
    "property": "og:url",
  },
  {
    "content": "https://yufan.me/images/open-graph.png",
    "property": "og:image",
  },
  {
    "content": "且听书吟 - 诗与梦想的远方",
    "property": "og:image:alt",
  },
  {
    "content": "1200",
    "property": "og:image:width",
  },
  {
    "content": "768",
    "property": "og:image:height",
  },
  {
    "content": "且听书吟 - 诗与梦想的远方",
    "property": "twitter:title",
  },
  {
    "content": "诗与梦想的远方",
    "property": "twitter:description",
  },
  {
    "content": "@syhily",
    "property": "twitter:site",
  },
  {
    "content": "@syhily",
    "property": "twitter:creator",
  },
  {
    "content": "summary_large_image",
    "property": "twitter:card",
  },
  {
    "content": "https://yufan.me/images/open-graph.png",
    "property": "twitter:image",
  },
  {
    "content": "且听书吟 - 诗与梦想的远方",
    "property": "twitter:image:alt",
  },
]
`;

exports[`snapshot: SEO meta head > listing head with paging links + noindex 1`] = `
[
  {
    "title": "归档 - 且听书吟",
  },
  {
    "content": "归档 - 且听书吟",
    "name": "title",
  },
  {
    "content": "诗与梦想的远方",
    "name": "description",
  },
  {
    "content": "WordPress 3.2.1",
    "name": "generator",
  },
  {
    "content": "雨帆",
    "name": "author",
  },
  {
    "href": "https://yufan.me",
    "rel": "author",
    "tagName": "link",
  },
  {
    "content": "雨帆,且听书吟,syhily,amehochan,yufan",
    "name": "keywords",
  },
  {
    "href": "https://yufan.me/feed/",
    "rel": "alternate",
    "tagName": "link",
    "title": "且听书吟",
    "type": "application/rss+xml",
  },
  {
    "href": "https://yufan.me/feed/atom/",
    "rel": "alternate",
    "tagName": "link",
    "title": "且听书吟",
    "type": "application/atom+xml",
  },
  {
    "href": "https://yufan.me/sitemap.xml",
    "rel": "sitemap",
    "tagName": "link",
  },
  {
    "href": "/favicon.ico",
    "rel": "icon",
    "sizes": "32x32",
    "tagName": "link",
  },
  {
    "href": "/favicon.svg",
    "rel": "icon",
    "tagName": "link",
    "type": "image/svg+xml",
  },
  {
    "href": "/apple-touch-icon.png",
    "rel": "apple-touch-icon",
    "tagName": "link",
  },
  {
    "href": "/manifest.webmanifest",
    "rel": "manifest",
    "tagName": "link",
  },
  {
    "content": "noindex,follow",
    "name": "robots",
  },
  {
    "content": "noindex,follow",
    "name": "googlebot",
  },
  {
    "content": "website",
    "property": "og:type",
  },
  {
    "content": "zh-CN",
    "property": "og:locale",
  },
  {
    "content": "归档 - 且听书吟",
    "property": "og:title",
  },
  {
    "content": "诗与梦想的远方",
    "property": "og:description",
  },
  {
    "content": "https://yufan.me/archives/page/2",
    "property": "og:url",
  },
  {
    "content": "https://yufan.me/images/open-graph.png",
    "property": "og:image",
  },
  {
    "content": "归档 - 且听书吟",
    "property": "og:image:alt",
  },
  {
    "content": "1200",
    "property": "og:image:width",
  },
  {
    "content": "768",
    "property": "og:image:height",
  },
  {
    "content": "归档 - 且听书吟",
    "property": "twitter:title",
  },
  {
    "content": "诗与梦想的远方",
    "property": "twitter:description",
  },
  {
    "content": "@syhily",
    "property": "twitter:site",
  },
  {
    "content": "@syhily",
    "property": "twitter:creator",
  },
  {
    "content": "summary_large_image",
    "property": "twitter:card",
  },
  {
    "content": "https://yufan.me/images/open-graph.png",
    "property": "twitter:image",
  },
  {
    "content": "归档 - 且听书吟",
    "property": "twitter:image:alt",
  },
  {
    "href": "https://yufan.me/archives/page/2",
    "rel": "canonical",
    "tagName": "link",
  },
  {
    "href": "https://yufan.me/archives",
    "rel": "prev",
    "tagName": "link",
  },
  {
    "href": "https://yufan.me/archives/page/3",
    "rel": "next",
    "tagName": "link",
  },
]
`;

exports[`snapshot: SEO meta head > post detail head includes article:tag entries 1`] = `
[
  {
    "title": "测试文章 - 且听书吟",
  },
  {
    "content": "测试文章 - 且听书吟",
    "name": "title",
  },
  {
    "content": "summary text",
    "name": "description",
  },
  {
    "content": "WordPress 3.2.1",
    "name": "generator",
  },
  {
    "content": "雨帆",
    "name": "author",
  },
  {
    "href": "https://yufan.me",
    "rel": "author",
    "tagName": "link",
  },
  {
    "content": "雨帆,且听书吟,syhily,amehochan,yufan",
    "name": "keywords",
  },
  {
    "href": "https://yufan.me/feed/",
    "rel": "alternate",
    "tagName": "link",
    "title": "且听书吟",
    "type": "application/rss+xml",
  },
  {
    "href": "https://yufan.me/feed/atom/",
    "rel": "alternate",
    "tagName": "link",
    "title": "且听书吟",
    "type": "application/atom+xml",
  },
  {
    "href": "https://yufan.me/sitemap.xml",
    "rel": "sitemap",
    "tagName": "link",
  },
  {
    "href": "/favicon.ico",
    "rel": "icon",
    "sizes": "32x32",
    "tagName": "link",
  },
  {
    "href": "/favicon.svg",
    "rel": "icon",
    "tagName": "link",
    "type": "image/svg+xml",
  },
  {
    "href": "/apple-touch-icon.png",
    "rel": "apple-touch-icon",
    "tagName": "link",
  },
  {
    "href": "/manifest.webmanifest",
    "rel": "manifest",
    "tagName": "link",
  },
  {
    "content": "index, follow",
    "name": "robots",
  },
  {
    "content": "index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1",
    "name": "googlebot",
  },
  {
    "content": "article",
    "property": "og:type",
  },
  {
    "content": "zh-CN",
    "property": "og:locale",
  },
  {
    "content": "测试文章 - 且听书吟",
    "property": "og:title",
  },
  {
    "content": "summary text",
    "property": "og:description",
  },
  {
    "content": "https://yufan.me/posts/hello",
    "property": "og:url",
  },
  {
    "content": "https://yufan.me/images/open-graph.png",
    "property": "og:image",
  },
  {
    "content": "测试文章 - 且听书吟",
    "property": "og:image:alt",
  },
  {
    "content": "1200",
    "property": "og:image:width",
  },
  {
    "content": "768",
    "property": "og:image:height",
  },
  {
    "content": "2024-02-03T00:00:00.000Z",
    "property": "article:modified_time",
  },
  {
    "content": "2024-01-02T03:04:05.000Z",
    "property": "article:published_time",
  },
  {
    "content": "雨帆",
    "property": "article:author",
  },
  {
    "content": "技术",
    "property": "article:section",
  },
  {
    "content": "typescript",
    "property": "article:tag",
  },
  {
    "content": "react",
    "property": "article:tag",
  },
  {
    "content": "测试文章 - 且听书吟",
    "property": "twitter:title",
  },
  {
    "content": "summary text",
    "property": "twitter:description",
  },
  {
    "content": "@syhily",
    "property": "twitter:site",
  },
  {
    "content": "@syhily",
    "property": "twitter:creator",
  },
  {
    "content": "summary_large_image",
    "property": "twitter:card",
  },
  {
    "content": "https://yufan.me/images/open-graph.png",
    "property": "twitter:image",
  },
  {
    "content": "测试文章 - 且听书吟",
    "property": "twitter:image:alt",
  },
  {
    "href": "https://yufan.me/posts/hello",
    "rel": "canonical",
    "tagName": "link",
  },
]
`;
